tokenvalidator/k8s/aws/traffic/virtual-service-payment-by-header-v1-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment-service-vsh
spec:
  hosts:
  - payment-service
  http:
  - match:
    - headers:
        end-user:
          exact: partha
    route:
    - destination:
        host: payment-service
        subset: v1
  - route:
    - destination:
        host: payment-service
        subset: v2
